fix z-index of arrow in jumbotron

--- a/src/styles/jumbotron.scss
+++ b/src/styles/jumbotron.scss
@@ -137,6 +137,7 @@
         border-radius: 50%;
         background: $primary;
         cursor: pointer;
+        z-index: 5;
 
         @media screen and (max-width: 820px) {
             top: 75px;
